fixing drag and drop on mobile

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
             ev.target.appendChild(document.getElementById(data));
         }
     </script>
+    <script src="app/scripts/DragDropTouch.js"></script>
 </body>
 
 </html>
